--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,9 @@
   --card-border-rgb: 131, 134, 135;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -77,6 +80,11 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+h1 {
+  font-size: 4rem;
+  text-align: center;
 }
 
 html,
