--- a/src/app/components/Header.css
+++ b/src/app/components/Header.css
@@ -3,10 +3,10 @@
     color: black;
     justify-content: center;
     background-color: rgb(170,100,84);
-    margin: 0px;
-    padding: 2px;
-    margin-bottom: 1%;
+    padding: 0;
+    margin-top: -2px;
     font-weight: 800;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, .2);  /* Horizontal offset, vertical offset, blur, color */
   }
   
   .WizardryBrewLogo {
@@ -23,15 +23,15 @@
     background-color: transparent !important; 
     border: none;
     outline: none !important;
+    transform: translateX(800%);
     z-index: 1000;
     }
   
   .menu-icon {
-    width: 34px;
+    width: 44px;
     height: 20px;
     position: relative;
     cursor: pointer;
-    left: 600px;
     z-index: 1000;
     }
   
@@ -69,7 +69,7 @@
   }
   
   .menu-button.open .menu-icon span:nth-child(1) {
-    top: 8px;
+    top: 3px;
     width: 100%;
     background: #000;
     transform: rotate(50deg);
@@ -95,11 +95,13 @@
     right: 0;
     width: 30%;
     height: 100%;
+    color: #4d3f3e;
     background-color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 800;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, .2);
   }
 
   .menu-items {
@@ -126,7 +128,7 @@
     .WizardryBrewLogo {
         position: relative;
         cursor: pointer;
-        right: 120px;
+        right: 100px;
         width: 24vmin;
         top: 2px;
         height: 12vh;
@@ -135,15 +137,20 @@
   
       .main-header {
         padding: 1%; 
+        margin-right: 0px;
       }
 
       .menu-overlay {
         width: 73%;  
-      }    
-  
-      .menu-icon {
-          left: 100px;
+        border-radius: 10px;
       }
+      
+      .menu-button {
+  
+        transform: translateX(140%);
+        
+        }
+
   
       .menu-button.open {
           border: none !important;
