--- a/src/app/components/HeroSection.css
+++ b/src/app/components/HeroSection.css
@@ -1,7 +1,90 @@
-.HeroSection {
+.HeroBackground {
+    height: 90vh; /* Full viewport height */
+    background: linear-gradient(90deg, rgba(233,203,165,1) 0%, rgba(243,224,205,1) 66%);
     display: flex;
-    align-items: center;
     flex-direction: column;
-    height: 100vh;
-    font-family: Kanit;
+    justify-content: center;
+    align-items: center;
+}
+
+.imgcheck {
+    width: 20%;
+    height: 40vh;
+    margin-left: 800px;
+    margin-bottom: -140px;
+    transform: rotate(130deg);
+}
+
+.arrow-button{
+    font-size: 4rem;
+    color: black;
+    border: none;
+    background-color: transparent;
+    animation: 0.4s arrow-waiter ease-in forwards 0.9s;
+  }
+  
+  .arrow-button:hover {
+    cursor: pointer;
+  }
+
+.HeroHeading {
+    z-index: 1s;
+    font-family: Mulish;
+    font-weight: 800;
+    font-size: 4.4rem;
+    letter-spacing: -2px;
+    margin-bottom: 100px;
+    text-align: center;
+    transform: translateY(-100%); 
+    line-height: 66px;
+    width: 50%;
+    color: #312929;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    -webkit-text-stroke: 1px black;
+}
+
+.HeroParagraph {
+    text-align: center;
+    transform: translateY(-1000%);
+}
+
+@media (max-width: 767.98px) {
+
+    .HeroBackground {
+        height: 90vh;
+        margin-right: 0px;
+    }
+
+    .imgcheck {
+        width: 63%;
+        height: 34vh;
+        transform: rotate(20deg)translateY(-10%);
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+
+    .HeroParagraph {
+        text-align: center;
+        transform: translateY(-480%);
+    }
+
+    .arrow-button{
+        margin-bottom: 100px;
+        margin-top: -140px;
+      }
+
+    .HeroHeading {
+        font-family: Kanit;
+        font-weight: 700;
+        font-size: 2.8rem;
+        transform: translateY(24%);
+        letter-spacing: 0px;
+        margin-bottom: 220px;
+        text-align: center;
+        width: 100%;
+        line-height: 48px;
+        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+        -webkit-text-stroke: .4px black;
+    }
+
 }
