--- a/src/app/components/Menu.css
+++ b/src/app/components/Menu.css
@@ -1,5 +1,5 @@
 .MenuSection {
-    height: auto;
+    height: 99vh;
     display: flex;
     background-color: aliceblue;
     padding: 0px;
@@ -21,15 +21,47 @@
     text-align: center;
     font-weight: 550;
     font-size: 1.3rem;
+    line-height: 18px;
     letter-spacing: 1px;
+    transform: translateY(-130%);
+
 }
 
 .espressodesc{
     font-size: 1.1rem;
     color: white;
     font-weight: 300;
-    line-height: 16px;
+    line-height: 18px;
+    transform: translateY(-100%);
     text-align: center;
+}
+
+.espressodesc1 {
+    font-size: 1.1rem;
+    color: white;
+    font-weight: 300;
+    line-height: 18px;
+    transform: translateY(-60%);
+    text-align: center;
+}
+
+.lattedesc {
+    font-size: 1.1rem;
+    color: white;
+    font-weight: 300;
+    line-height: 18px;
+    transform: translateY(-150%);
+    text-align: center;
+}
+
+.mochalatte {
+    color: white;
+    text-align: center;
+    font-weight: 550;
+    font-size: 1.3rem;
+    line-height: 18px;
+    letter-spacing: 1px;
+    transform: translateY(-340%);
 }
 
 .transcup {
@@ -38,7 +70,7 @@
 }
 
 .espresso {
-    height: 62vh;
+    height: 52vh;
     margin-right: 800px;
     padding: 40px;
     width: 30vmin;
@@ -46,7 +78,17 @@
     margin-top: -80px;
     background-color: rgb(170,100,84)  ;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, .6);
-    transition: 0.3s transform ease;
+}
+
+.iced-latte {
+    background-color: rgba(167,122,81,255);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, .6);
+    height: 46vh;
+    margin-left: 800px;
+    padding: 40px;
+    width: 30vmin;
+    margin-bottom: 20px;
+    margin-top: -580px;
 }
 
 .espressoheading {
@@ -78,21 +120,33 @@
         font-family: Kanit;
     }
 
+    .lattedesc {
+        
+        transform: translateY(-160%);
+    
+    }    
+
     .espresso {
-        height: 60vh;
+        height: 44vh;
         margin-right: 0px;
         padding: 40px;
         width: 60vmin;
         margin-top: 0px;
         background-color: rgb(170,100,84)  ;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, .6);
-        transition: 0.3s transform ease;
-    }
-    
-    .espresso:hover {
-        transform: rotate(-1deg);
     }
 
+    .iced-latte {
+    background-color: rgba(167,122,81,255);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, .6);
+    height: 36vh;
+    margin-left: 0px;
+    padding: 40px;
+    width: 60vmin;
+    margin-bottom: 20px;
+    margin-top: 100px;
+}
+    
     .transcup {
         margin: 60px;
         height: 20vh;
