--- a/src/app/components/Gallery.css
+++ b/src/app/components/Gallery.css
@@ -22,6 +22,12 @@
     width: 38vmin;
     border-radius: 12px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, .2);
+    transition: 0.3s scale ease;
+}
+
+.imagesforgallery:hover {
+    scale: 1.1;
+    cursor: pointer;
 }
 
 @media (max-width: 767.98px) {
