--- a/src/app/components/HeroSection.css
+++ b/src/app/components/HeroSection.css
@@ -71,9 +71,9 @@
     }
 
     .imgcheck {
-        width: 63%;
-        height: 34vh;
-        transform: rotate(20deg)translateY(0%);
+        width: 73%;
+        height: 42vh;
+        transform: rotate(0deg)translateY(10%)translateX(-10%);
         margin-top: 0px;
         margin-left: 0px;
     }
@@ -89,8 +89,7 @@
       }
 
     .HeroHeading {
-        font-family: Kanit;
-        font-weight: 700;
+        font-weight: 900;
         font-size: 2.8rem;
         animation: 0.6s headinganimationmobile forwards;
         letter-spacing: 0px;
@@ -98,7 +97,7 @@
         text-align: center;
         width: 100%;
         line-height: 48px;
-        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+        text-shadow: 8px 8px 18px rgba(0, 0, 0, 0.3);
         -webkit-text-stroke: .4px black;
     }
 
