--- a/src/app/components/About.css
+++ b/src/app/components/About.css
@@ -1,10 +1,16 @@
 .AboutSection {
     display: flex;
-    font-family: Kanit;
+    font-family: Mulish;
     height: auto;
+    margin: 40px;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 0px;
     background-color:rgb(220, 220, 220);
+}
+
+.AboutHeading {
+    font-size: 4rem;
 }
 
 .FounderPic {
@@ -23,8 +29,6 @@
     font-size: 2.6rem;
 }
 
-
-
 .StoryDesc {
     align-self: flex-start;
     margin: 60px;
@@ -39,9 +43,8 @@
     }
 
     .AboutSection {
-        
         height: auto;
-        
+        margin: 0px;
     }
 
     .FounderPic {
