--- a/src/app/components/About.css
+++ b/src/app/components/About.css
@@ -15,11 +15,11 @@
 
 .FounderPic {
     height: 60vh;
-    position: absolute;
-    opacity: .5;
+    position: relative;
+    opacity: .8;
     border-radius: 4px;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, .2);
-    transform: translateY(80%) translateX(-120%);
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, .6);
+    transform: translateY(0%) translateX(0%);
 }
 
 .MissionHeading {
