--- a/src/app/components/Header.css
+++ b/src/app/components/Header.css
@@ -117,6 +117,11 @@
     color: black;
     font-size: 3.2rem;
     font-weight: 700;
+    
+  }
+
+  .links {
+    text-decoration: none !important;
   }
   
   .menu-items > div {
@@ -176,7 +181,7 @@
         }
   
       .menu-items {
-          font-size: 1.8rem;
+          font-size: 2.2rem;
         }
 
         .carticon {
