--- a/src/app/components/Menu.css
+++ b/src/app/components/Menu.css
@@ -122,7 +122,6 @@
     .lattedesc {
         font-size: .8rem;
         transform: translateY(-10%);
-        
     }
     
     .espressodesc{
@@ -146,7 +145,7 @@
     }  
 
     .espresso {
-        height: 50vh;
+        height: auto;
         margin-right: 0px;
         padding: 40px;
         width: 55vmin;
@@ -158,12 +157,12 @@
     .iced-latte {
         background-color: rgba(167,122,81,255);
         box-shadow: 0px 4px 10px rgba(0, 0, 0, .6);
-        height: 40vh;
+        height: auto;
         margin-left: 0px;
         padding: 40px;
         width: 55vmin;
         margin-bottom: 20px;
-        margin-top: 100px;
+        margin-top: 110px;
     }
     
     .transcup {
